name:                hga
version:             0.1.0.0
synopsis:            Genetic Algorithms implementations in haskell
description:         Please see README.md
homepage:            https://github.com/codegrimoire/hga#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Smith
maintainer:          lsmith@zenoscave.com
copyright:           2016 Luke Smith
category:            Genetic Algorithms
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hga-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hga
  default-language:    Haskell2010

test-suite hga-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hga
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Zenoscave/hga
